added async spinner after sending form data

--- a/src/app/templates/index.html
+++ b/src/app/templates/index.html
@@ -9,20 +9,12 @@
 	<div>
 		hello world from template
 	</div>
-
+	<a href="/form">
+		go to loading button
+	</a>
 	<ul>
 		<li>asd</li>
-		<li>asd</li>
-		<li>asd</li>
-		<li>asd</li>
-		<li>asd</li>
-		<li>asd</li>
-		<li>asd</li>
-		<li>asd</li>
-		<li>asd</li>
-		<li>asd</li>
-		<li>asd</li>
-		<li>asd</li>
+
 	</ul>
 
 </body>
