--- a/src/app/templates/index.html
+++ b/src/app/templates/index.html
@@ -5,6 +5,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title> welcome amigo </title>
+	<link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
 	<style>
 		#routes {
 			font-size: 18px;
@@ -22,14 +23,14 @@
 		}
 
 		li {
-			margin:  15px;
-			padding:  5;
+			margin: 15px;
+			padding: 5;
 		}
 	</style>
 </head>
 
 <body>
-	<div>
+	<div class="text-center text-gray-900 sidebar-icon">
 		this is index.html
 	</div>
 	<div id="routes">
@@ -37,12 +38,13 @@
 	</div>
 	<ul>
 		{% for item in routes %}
-			<li>
-				<a href="{{item}}">
-					{{ item }}
-				</a>
-			 </li>
+		<li>
+			<a href="{{item}}">
+				{{ item }}
+			</a>
+		</li>
 		{% endfor %}
 	</ul>
 </body>
+
 </html>
