better todo app
improved performance of todo app by making requests from frondend using ajax to backend and not reload the page everytime we add a new todo

--- a/src/app/static/todos/style.css
+++ b/src/app/static/todos/style.css
@@ -74,7 +74,7 @@
 .todo-completed {
 	text-decoration: line-through black;
 	text-decoration-thickness: 2px;
-	color: var(--one-dark-yellow);
+	/*color: var(--one-dark-yellow);*/
 }
 
 
