--- a/src/app/static/css/default.css
+++ b/src/app/static/css/default.css
@@ -36,6 +36,7 @@ body {
     background-color: #282c34;
 /*	align-content: center;
 	align-items: center;*/
+    color: var(--global-font-color);
 	font-family: var(--global-font);
 	font-size: var(--global-font-size);
 }
