--- a/src/app/templates/todos/index.html
+++ b/src/app/templates/todos/index.html
@@ -62,9 +62,6 @@
 							}
 						})
 						textbox.val('');
-
-					} else {
-						alert("invalid message")
 					}
 				}
 			});
@@ -153,7 +150,7 @@
 
 
 	<!-- name is the key that you will use to access the data from textbox; like this: request.form["text"] -->
-	<input class="todo-text-box" name="text" type="text" placeholder="cmon, write some ideas" id="textbox" autofocus>
+	<input class="todo-text-box" name="text" type="text" placeholder="cmon, write some ideas" id="textbox" autofocus required>
 	<!-- <textarea class="todo-text-box" name="text" type="text" placeholder="just a todo" autofocus> </textarea> -->
 
 
