add registration system with validation for new users

--- a/src/app/templates/todos/register.html
+++ b/src/app/templates/todos/register.html
@@ -23,19 +23,47 @@
 				// enter
 				// https://stackoverflow.com/a/6542455/12172291
 				if (event.which == 13) {
-						create_new_account()
+					create_new_account()
 				}
 			});
 		})
 
+
 		function create_new_account() {
-			console.log("creating new account ...")
-			console.log("just pressed enter")
 			const username_input = $('#username')
+			const username_small = $("#username_small")
+
 			const email_input = $('#email')
+			const email_small = $("#email_small")
+
 			const password_input = $('#password')
-			const password_check_input = $("#password-check")
+			const password_small = $('#password_small')
+
+			const password_check_input = $("#password_check")
+			const password_check_small = $("#password_check_small")
+
 			const remember_me_checkbox = $("#remember-me")
+
+			const ui_controller = {
+				"username": {
+					"input": username_input,
+					"small": username_small
+				},
+				"email": {
+					"input": email_input,
+					"small": email_small
+				},
+				"password": {
+					"input": password_input,
+					"small": password_small
+				},
+				"password_check": {
+					"input": password_check_input,
+					"small": password_check_small
+				}
+			}
+			// console.log("creating new account ...")
+			// console.log("just pressed enter")
 
 			const username = username_input.val()
 			const email = email_input.val()
@@ -51,41 +79,101 @@
 				"remember_me": remember_me
 			}
 
+			let has_empty = false;
 			for (var key in payload) {
 				console.log(key)
 				if (key == "remember_me") {
 					continue
 				}
 				if (payload[key] == "") {
-					console.log("input cannot be empty")
-					return
+					has_empty = true;
+					ui_controller[key]["input"].css({ "border-color": "#e74c3c" })
+					ui_controller[key]["small"].text("field cannot be empty")
+					ui_controller[key]["small"].css({ "visibility": "visible" })
+				} else {
+					ui_controller[key]["small"].css({ "visibility": "hidden" })
+					ui_controller[key]["input"].css({ "border-color": "#2ecc71" })
 				}
 			}
 
-			console.log(payload)
+			if (has_empty) {
+				console.log("input cannot be empty")
+				return
+			}
+
+			// console.log(payload)
 
 			$.ajax({
 				type: "POST",
 				contentType: "application/json",
 				data: JSON.stringify(payload),
 				dataType: "json",
-				url: "/todos/api/register",
+				url: "/todos/api/register/validation",
 				// if this is wrong, then we do something about it
 				// url: "/todos/api/mongo/ad",
 				success: function(json_response) {
 					// here i should receive the oid from database
 					console.log(json_response)
+
+					let has_errors = false
+					for (var key in json_response) {
+						if (key == "register_token") {
+							continue
+						}
+						if (json_response[key]["passed"] === false) {
+							has_errors = true
+							// 4jvndu__!@#qmgh49195AND
+							ui_controller[key]["input"].css({ "border-color": "#e74c3c" })
+							ui_controller[key]["small"].text(json_response[key]["error_message"])
+							ui_controller[key]["small"].css({ "visibility": "visible" })
+						} else {
+							ui_controller[key]["small"].css({ "visibility": "hidden" })
+							ui_controller[key]["input"].css({ "border-color": "#2ecc71" })
+						}
+					}
+
+					if (has_errors) {
+						return;
+					}
+
+					payload["register_token"] = json_response["register_token"]
+
+					$.ajax({
+						type: "POST",
+						contentType: "application/json",
+						data: JSON.stringify(payload),
+						dataType: "json",
+						url: "/todos/register",
+						// if this is wrong, then we do something about it
+						// url: "/todos/api/mongo/ad",
+						success: function(data) {
+							console.log("account created with success :)")
+							username_input.val("")
+							email_input.val("")
+							password_input.val("")
+							password_check_input.val("")
+							remember_me_checkbox.val("")
+			        if (data.redirectTo) {
+			            // data.redirect contains the string URL to redirect to
+			            window.location.href = data.redirectTo;
+			        } else {
+			        	console.log("there is not redirect")
+			        }
+						},
+						error: function(error) {
+							console.log(error)
+							alert('error from server')
+						}
+					})
+
+
 				},
 				error: function() {
 					alert('some error occured. cant update UI')
 				}
 			})
 
-			username_input.val("")
-			email_input.val("")
-			password_input.val("")
-			password_check_input.val("")
-			remember_me_checkbox.val("")
+
 		}
 	</script>
 
@@ -99,13 +187,13 @@
 			<div class="form-control">
 				<label for="username">[Username]</label>
 				<input type="text" placeholder="alexzander" id="username" name="username" required autofocus>
-				<small>Error message</small>
+				<small id="username_small">Error message</small>
 			</div>
 
 			<div class="form-control">
 				<label for="username">[Email]</label>
 				<input type="email" placeholder="alexxander18360@gmail.com" id="email" name="email" required>
-				<small>Error message</small>
+				<small id="email_small">Error message</small>
 			</div>
 
 			<!-- 			<div class="form-control">
@@ -117,15 +205,15 @@
 			<div class="form-control">
 				<label for="username">[Password]</label>
 				<input type="password" placeholder="1238g12hvb12y41!@!29_!$!@$!@#" id="password" name="password" required>
-				<small>Error message</small>
+				<small id="password_small">Error message</small>
 			</div>
 
 			<div class="form-control">
 				<label for="username">[Password](Again)</label>
-				<input type="password" placeholder="1238g12hvb12y41!@!29_!$!@$!@#" id="password-check" name="password-check"
+				<input type="password" placeholder="1238g12hvb12y41!@!29_!$!@$!@#" id="password_check" name="password-check"
 					required>
 				<span class="password-hint"> (make sure its the same, buddy:)</span>
-				<small>Error message</small>
+				<small id="password_check_small">Error message</small>
 			</div>
 
 			<div class="form-control">
