--- a/src/app/static/todos/register.css
+++ b/src/app/static/todos/register.css
@@ -75,7 +75,7 @@ body {
 .form-control {
 	color: var(--dark-grey);
 	margin-bottom: 10px;
-	padding-bottom: 20px;
+	padding-bottom: 10px;
 	position: relative;
 }
 
@@ -102,20 +102,22 @@ body {
 	border-color: var(--one-dark-blue);
 }
 
-.form-control.success input {
+.success input {
 	border-color: #2ecc71;
 }
 
-.form-control.error input {
+.error {
 	border-color: #e74c3c;
 }
 
 .form-control small {
 	color: #e74c3c;
-	position: absolute;
+	/*position: absolute;*/
 	bottom: 0;
 	left: 0;
 	visibility: hidden;
+	font-size: 13px;
+	font-weight: bold;
 }
 
 .form-control.error small {
